--- a/src/app/pages/payment-auth/components/payment-auth/payment-auth.component.scss
+++ b/src/app/pages/payment-auth/components/payment-auth/payment-auth.component.scss
@@ -49,6 +49,16 @@
   border-radius: 4px;
 }
 
-::ng-deep .custom-icon{
+.custom-action {
+  cursor: pointer;
+  padding-right: 8px;
   font-size: 18px;
+
+  &:hover {
+    color: #1677ff;
+  }
+
+  .delete:hover {
+    color: #ff4d4f;
+  }
 }
