--- a/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
+++ b/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
@@ -48,10 +48,12 @@
       <table-column header="Số điện thoại" key="mobile" [width]="'120px'"></table-column>
       <table-column header="Email" key="email" [width]="'200px'"></table-column>
       <table-column header="Mã học viên" key="code" [width]="'180px'"></table-column>
+      <table-column header="Loại vé" key="ticket" [width]="'180px'"></table-column>
       <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
       <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="teacherName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="title" [width]="'200px'"></table-column>
+      <table-column header="Tên lớp học" key="className" [width]="'200px'"></table-column>
       <table-column header="Tên landing page" key="title" [width]="'200px'"></table-column>
       <table-column header="Số điểm" key="title" [width]="'200px'"></table-column>
 
