--- a/src/app/pages/student/components/waiting-student/waiting-student.component.html
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.html
@@ -45,6 +45,7 @@
       <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="lecturerName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
+      <table-column header="Tên lớp học" key="className" [width]="'200px'"></table-column>
       <table-column header="Tên landing page" key="landingPageName" [width]="'200px'"></table-column>
       <table-column header="Số điểm" key="title" [width]="'200px'"></table-column>
       <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'200px'"></table-column>
