--- a/src/app/pages/student/components/studying-student/studying-student.component.html
+++ b/src/app/pages/student/components/studying-student/studying-student.component.html
@@ -28,20 +28,13 @@
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="Ngày đăng ký" key="createdDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
       <table-column header="Tên học viên" key="name" [width]="'180px'"></table-column>
-      <table-column header="Số điện thoại" key="mobile" [width]="'120px'"></table-column>
-      <table-column header="Email" key="email" [width]="'200px'"></table-column>
-      <table-column header="Mã học viên" key="code" [width]="'180px'"></table-column>
-      <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
-      <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
-      <table-column header="Tên diễn giả" key="lecturerName" [width]="'200px'"></table-column>
-      <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'200px'"></table-column>
       <table-column header="Khóa học gần nhất" key="latestCourseName" [width]="'200px'"></table-column>
       <table-column header="Điểm danh gần nhất" key="latestAttendance" [width]="'200px'"></table-column>
       <table-column header="Tổng học phí" key="totalPrice" [width]="'200px'"></table-column>
 
-      <table-column header="Tag" key="tagNote" [width]="'220px'">
+      <table-column header="thẻ tag" key="tagNote" [width]="'220px'">
         <ng-template appCell let-data>
-          <nz-select style="display: block" nzPlaceHolder="Chọn tag" [ngModel]="data.tagNote"
+          <nz-select style="display: block" nzPlaceHolder="Chọn thẻ tag" [ngModel]="data.tagNote"
                      [nzCustomTemplate]="selectTag" nzBorderless (ngModelChange)="onTagChange($event, data)">
             <nz-option *ngFor="let tag of listTag" nzCustomContent
                        [nzValue]="tag.value" [nzLabel]="tag.title" [nzTitle]="tag.color">
@@ -54,6 +47,13 @@
           </ng-template>
         </ng-template>
       </table-column>
+      <table-column header="Số điện thoại" key="mobile" [width]="'120px'"></table-column>
+      <table-column header="Email" key="email" [width]="'200px'"></table-column>
+      <table-column header="Mã học viên" key="code" [width]="'180px'"></table-column>
+      <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
+      <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
+      <table-column header="Tên diễn giả" key="lecturerName" [width]="'200px'"></table-column>
+      <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'200px'"></table-column>
 
       <table-column [width]="'180px'" fixColumn="right" >
         <ng-template appHeader>
