--- a/src/app/pages/payment-auth/components/payment-auth/payment-auth.component.html
+++ b/src/app/pages/payment-auth/components/payment-auth/payment-auth.component.html
@@ -31,10 +31,10 @@
           {{data.price + ' VND'}}
         </ng-template>
       </table-column>
-      <table-column header="Trạng thái thanh toán" key="verifyPay" [width]="'180px'">
+      <table-column header="Xác thực thanh toán" key="verifyPay" [width]="'180px'">
         <ng-template appCell let-data>
-          <span class="text-valid" *ngIf="data.verifyPay">Đã thanh toán</span>
-          <span class="text-invalid" *ngIf="!data.verifyPay">Chưa thanh toán</span>
+          <span class="text-valid" *ngIf="data.verifyPay">Đã xác thực</span>
+          <span class="text-invalid" *ngIf="!data.verifyPay">Chưa xác thực</span>
         </ng-template>
       </table-column>
 
@@ -60,7 +60,7 @@
 
           <span class="custom-action" *ngIf="data.verifyPay">
             <span class="delete"
-              nzTooltipTitle="Hủy thanh toán" nzTooltipPlacement="top" nz-tooltip
+              nzTooltipTitle="Hủy xác thực" nzTooltipPlacement="top" nz-tooltip
               nz-icon nzType="close-square" nzTheme="outline" (click)="unVerifyPayment(data)">
             </span>
           </span>
