--- a/src/app/pages/website-config/components/edit-config/edit-config.component.html
+++ b/src/app/pages/website-config/components/edit-config/edit-config.component.html
@@ -26,7 +26,7 @@
             </div>
 
             <div nz-col [nzSpan]="9">
-              <span class="text-label">copy right</span>
+              <span class="text-label">copy right(Tuyên bố bản quyền)</span>
               <input nz-input formControlName="copyright">
             </div>
 
