--- a/src/app/pages/setting/components/courses/create-course/create-course.component.html
+++ b/src/app/pages/setting/components/courses/create-course/create-course.component.html
@@ -147,9 +147,9 @@
               <div>
                 <nz-input-number
                   class="input-nz-number"
-                  formControlName="coursePrice"
+                  formControlName="price"
                   [nzMin]="0"
-                  [nzStep]="1"
+                  [nzStep]="1000"
                   [nzFormatter]="formatterVnd"
                   [nzParser]="parserVnd"
                 ></nz-input-number>
