--- a/src/app/pages/email-smtp/components/create-email-account/create-email-account.component.html
+++ b/src/app/pages/email-smtp/components/create-email-account/create-email-account.component.html
@@ -8,22 +8,38 @@
       <div nz-row [nzGutter]=[16,16]>
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-            Email
-          </span>
-
-          <input
-            nz-input autofocus formControlName="userId"
-          >
-        </div>
-
-        <div nz-col [nzSpan]="8">
-          <span class="text-label">
             Tên email
           </span>
 
           <input
-            nz-input formControlName="name"
+            nz-input autofocus formControlName="name"
+            [nzStatus]="(emailAccountForm.get('name')?.invalid &&
+                        (emailAccountForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
+          <span
+            class="text-danger"
+            *ngIf="(emailAccountForm.get('name')?.touched || isSubmit) &&
+                    emailAccountForm.get('name')?.hasError('required')"
+          >Tên email không được để trống</span>
+        </div>
+
+        <div nz-col [nzSpan]="8">
+          <span class="text-label">
+            Địa chỉ email
+          </span>
+
+          <input
+            nz-input formControlName="addressEmail"
+            [nzStatus]="(emailAccountForm.get('addressEmail')?.invalid &&
+                        (emailAccountForm.get('addressEmail')?.touched || isSubmit)) ? 'error' : ''"
           >
+
+          <span
+            class="text-danger"
+            *ngIf="(emailAccountForm.get('addressEmail')?.touched || isSubmit)  &&
+                    emailAccountForm.get('addressEmail')?.hasError('required')"
+          >
+            Địa chỉ email không được để trống
+          </span>
         </div>
 
         <div nz-col [nzSpan]="8" >
@@ -34,12 +50,19 @@
 
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-            Địa chỉ email
+            Thuộc sở hữu
           </span>
 
-          <input
-            nz-input formControlName="addressEmail"
+
+          <nz-select
+            formControlName="userId"
           >
+            <nz-option
+              *ngFor="let op of listOpAccount"
+              [nzValue]="op.id"
+              [nzLabel]="op.fullName"
+            ></nz-option>
+        </nz-select>
         </div>
 
         <div nz-col [nzSpan]="8">
@@ -49,8 +72,20 @@
 
           <input
             nz-input formControlName="host"
+            [nzStatus]="(emailAccountForm.get('host')?.invalid &&
+                        (emailAccountForm.get('host')?.touched || isSubmit)) ? 'error' : ''"
           >
+
+          <span
+            class="text-danger"
+            *ngIf="(emailAccountForm.get('host')?.touched || isSubmit) &&
+                    emailAccountForm.get('host')?.hasError('required')"
+          >
+            Host không được để trống
+          </span>
         </div>
+
+        <div nz-col [nzSpan]="8"></div>
 
         <div nz-col [nzSpan]="8">
           <span class="text-label">
@@ -59,7 +94,17 @@
 
           <input
             nz-input formControlName="userName"
+            [nzStatus]="(emailAccountForm.get('userName')?.invalid &&
+                        (emailAccountForm.get('userName')?.touched || isSubmit)) ? 'error' : ''"
           >
+
+          <span
+            class="text-danger"
+            *ngIf="(emailAccountForm.get('userName')?.touched || isSubmit) &&
+                    emailAccountForm.get('userName')?.hasError('required')"
+          >
+            Tên đăng nhập không được để trống
+          </span>
         </div>
 
         <div nz-col [nzSpan]="8">
@@ -69,18 +114,39 @@
 
           <input
             nz-input formControlName="password"
+            [nzStatus]="(emailAccountForm.get('password')?.invalid &&
+                        (emailAccountForm.get('password')?.touched || isSubmit)) ? 'error' : ''"
           >
+
+          <span
+            class="text-danger"
+            *ngIf="(emailAccountForm.get('password')?.touched || isSubmit) &&
+                    emailAccountForm.get('password')?.hasError('required')"
+          >
+            Mật khẩu email không được để trống
+          </span>
         </div>
+
+        <div nz-col [nzSpan]="8"></div>
 
         <div nz-col [nzSpan]="8">
           <div class="text-label">Port</div>
           <nz-input-number
             style="width: 100%"
+            formControlName="port"
             [nzMin]="0" [nzStep]="1"
-            formControlName="no"></nz-input-number>
+            [nzStatus]="(emailAccountForm.get('port')?.invalid &&
+                        (emailAccountForm.get('port')?.touched || isSubmit)) ? 'error' : ''"
+            ></nz-input-number>
         </div>
 
-
+        <span
+          class="text-danger"
+          *ngIf="(emailAccountForm.get('port')?.touched || isSubmit) &&
+                  emailAccountForm.get('port')?.hasError('required')"
+        >
+          Port không được để trống
+        </span>
       </div>
     </form>
   </div>
