--- a/src/app/pages/register-form/components/attach-ticket/attach-ticket.component.html
+++ b/src/app/pages/register-form/components/attach-ticket/attach-ticket.component.html
@@ -1,14 +1,32 @@
-<nz-select
-  [(ngModel)]="selectedTicket"
-  (nzScrollToBottom)="loadMore()"
-  nzPlaceHolder="Chọn vé"
-  nzAllowClear
-  [nzDropdownRender]="renderTemplate"
->
+<div nz-row [nzGutter]=[16,16]>
+  <div nz-col [nzSpan]="12">
+    <label class="modal-title">Chọn vé để gắn</label>
+    <nz-select
+      style="display: block"
+      [(ngModel)]="selectedTicket"
+      (nzScrollToBottom)="loadMore()"
+      nzPlaceHolder="Chọn vé"
+      nzAllowClear
+      [nzDropdownRender]="renderTemplate"
+    >
 
-    <nz-option *ngFor="let op of optionList" [nzValue]="op.id" [nzLabel]="op.name"></nz-option>
+      <nz-option *ngFor="let op of optionList" [nzValue]="op.id" [nzLabel]="op.name"></nz-option>
 
-</nz-select>
-<ng-template #renderTemplate>
-  <nz-spin *ngIf="loading"></nz-spin>
-</ng-template>
+    </nz-select>
+
+    <ng-template #renderTemplate>
+      <nz-spin *ngIf="loading"></nz-spin>
+    </ng-template>
+  </div>
+
+  <div nz-col [nzSpan]="24" class="btn-group">
+    <button nz-button (click)="closeModal()">
+      Hủy
+    </button>
+    <button nz-button nzType="primary" [nzLoading]="loading" (click)="attachTicket()">
+      Xác nhận
+    </button>
+  </div>
+</div>
+
+
