--- a/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
+++ b/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
@@ -32,8 +32,8 @@
       <table-column header="Thanh toán" key="isPay" [width]="'180px'">
         <ng-template appCell let-data>
           <span class="text-invalid" *ngIf="data.isPay === 0">Chưa thanh toán</span>
-          <span class="text-warning" *ngIf="data.isPay === 1">Thanh toán một phần</span>
-          <span class="text-valid" *ngIf="data.isPay === 2">Đã thanh toán</span>
+          <span class="text-warning" *ngIf="data.isPay === 2">Thanh toán một phần</span>
+          <span class="text-valid" *ngIf="data.isPay === 1">Đã thanh toán</span>
         </ng-template>
       </table-column>
       <table-column header="Thẻ tag" key="tagNote" [width]="'220px'">
@@ -82,18 +82,34 @@
         </ng-template>
 
         <ng-template appCell let-data>
-          <span class="custom-action" (click)="detail(data)">
+          <span class="custom-action" (click)="detail(data)"
+                nz-tooltip nzTooltipTitle="Chi tiết học viên">
             <span nz-icon nzType="search" nzTheme="outline"></span>
           </span>
-          <span class="custom-action" >
+          <span class="custom-action"
+                nz-tooltip nzTooltipTitle="Gọi điện">
             <span nz-icon nzType="phone" nzTheme="outline"></span>
           </span>
-          <span class="custom-action" (click)="paymentCheck(data)">
+          <span class="custom-action" (click)="paymentCheck(data)"
+                nz-tooltip nzTooltipTitle="Xác thực thanh toán">
             <span nz-icon nzType="wallet" nzTheme="outline"></span>
+          </span>
+
+          <span class="custom-action" (click)="openDrawer(data)"
+                nz-tooltip nzTooltipTitle="Ghi chú">
+            <span nz-icon nzType="edit" nzTheme="outline"></span>
           </span>
         </ng-template>
       </table-column>
     </app-table>
   </ng-container>
 </div>
+
+<ng-template #drawerTemplate let-data let-drawerRef="drawerRef">
+  <textarea  class="take-note" nz-input placeholder="Viết ghi chú ở đây" [(ngModel)]="note"></textarea>
+  <div class="take-note-btn">
+    <button nz-button nzType="primary" (click)="addNote(data)" (click)="drawerRef.close()">Lưu</button>
+    <button nz-button (click)="drawerRef.close()">Hủy</button>
+  </div>
+</ng-template>
 
