--- a/src/app/pages/ticket/components/ticket/ticket.component.html
+++ b/src/app/pages/ticket/components/ticket/ticket.component.html
@@ -23,16 +23,15 @@
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="Ngày tạo" key="createDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
-      <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
-      <table-column header="Tên diễn giả" key="teacherName" [width]="'200px'"></table-column>
-      <table-column header="Tên landing page" key="teacherName" [width]="'200px'"></table-column>
       <table-column header="Tên vé" key="name" [width]="'200px'"></table-column>
-      <table-column header="Mã vé" key="teacherName" [width]="'200px'"></table-column>
       <table-column header="Giá vé" key="price" [width]="'200px'">
         <ng-template appCell let-data>
           <span>{{data.price}} VND</span>
         </ng-template>
       </table-column>
+      <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
+      <table-column header="Tên diễn giả" key="teacherName" [width]="'200px'"></table-column>
+      <table-column header="Tên tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Trạng thái" key="status" [width]="'180px'">
         <ng-template appCell let-data>
           <span class="text-valid" *ngIf="data.status">Đang hoạt động</span>
