add update course

--- a/src/app/pages/email-smtp/components/create-email-account/create-email-account.component.html
+++ b/src/app/pages/email-smtp/components/create-email-account/create-email-account.component.html
@@ -50,7 +50,7 @@
 
         <div nz-col [nzSpan]="8">
           <span class="text-label">
-            Thuộc sở hữu
+            Tên diễn giả
           </span>
 
 
