--- a/src/app/pages/landing-page/components/attach-form/attach-form.component.html
+++ b/src/app/pages/landing-page/components/attach-form/attach-form.component.html
@@ -1,6 +1,6 @@
 <div nz-row [nzGutter]=[16,16]>
   <div nz-col [nzSpan]="24">
-    <label class="modal-title">Chọn form để gắn</label>
+    <label class="modal-title">Chọn form để sử dụng cho landing page</label>
     <nz-select style="display: block"
                [(ngModel)]="listOfSelectForm"
                (nzScrollToBottom)="loadMore()"
