--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -45,3 +45,16 @@ input[type=checkbox]:checked:after {
   left: 6px;
 }
 
+//::ng-deep ::-webkit-scrollbar{
+//  width: 5px;
+//}
+//
+//::ng-deep ::-webkit-scrollbar-track{
+//  background-color: #fafafa;
+//}
+//
+//::ng-deep ::-webkit-scrollbar-thumb{
+//  background-image: linear-gradient(-45deg, #ffc50e, #001529);
+//  border-radius: 50px;
+//}
+
