--- a/src/app/shared/layouts/side-bar/side-bar.component.scss
+++ b/src/app/shared/layouts/side-bar/side-bar.component.scss
@@ -15,6 +15,10 @@
   z-index: 10;
   min-height: 100vh;
   box-shadow: 2px 0 6px rgba(0,21,41,.35);
+  overflow: scroll;
+}
+::-webkit-scrollbar{
+  width: 0px;
 }
 
 .sidebar-logo {
