--- a/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
+++ b/src/app/pages/student/components/taking-care-student/taking-care-student.component.html
@@ -55,6 +55,13 @@
       <table-column header="Số điện thoại" key="mobile" [width]="'120px'"></table-column>
       <table-column header="Email" key="email" [width]="'200px'"></table-column>
       <table-column header="Mã học viên" key="code" [width]="'180px'"></table-column>
+      <table-column header="Khu vực" key="area" [width]="'180px'">
+        <ng-template appCell let-data>
+          <span *ngIf="data.area === 1">Miền Bắc</span>
+          <span *ngIf="data.area === 2">Miền Trung</span>
+          <span *ngIf="data.area === 3">Miền Nam</span>
+        </ng-template>
+      </table-column>
       <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
       <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="lecturerName" [width]="'200px'"></table-column>
