--- a/src/app/pages/publication/components/create-publication/create-publication.component.scss
+++ b/src/app/pages/publication/components/create-publication/create-publication.component.scss
@@ -106,6 +106,7 @@ input[type="color"]::-webkit-color-swatch {
   color: #001529!important;
   width: 100%;
   top: 0;
+  text-align: start;
 }
 
 .publication{
