add feature export excel

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -88,15 +88,15 @@
           </div>
 
           <div nz-col nzSpan="8" class="user-avatar">
-            <nz-avatar  [nzSize]="200" nzIcon="user" nzSrc="//zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></nz-avatar>
+            <nz-avatar  [nzSize]="200" nzIcon="user" [nzSrc]="linkAvatar"></nz-avatar>
 
-            <button
-              nz-button nzType="primary" nzShape="round" class="change-ava-btn"
-            >
+            <label for="file" class="upload">
+              <span nz-icon nzType="upload" nzTheme="outline"></span>
               Thay ảnh đại diện
-            </button>
-
-<!--            <input type="file" (change)="handleChange($event)" accept="image/*,.jpg,.jpeg">-->
+            </label>
+            <input #fileInput type="file" (change)="handleChange($event)"
+                   accept="image/png, image/gif, image/jpeg"
+                   class="upload-file" name="file" id="file" >
 
           </div>
         </div>
