--- a/src/app/shared/components/filter-form/filter-form.component.scss
+++ b/src/app/shared/components/filter-form/filter-form.component.scss
@@ -34,3 +34,9 @@
   background-color: #40a9ff;
   color: white;
 }
+
+.excel:hover{
+  border: 1px solid #539742;
+  background-color: #539742;
+  color: white;
+}
