--- a/src/app/pages/publication/components/publication/publication.component.scss
+++ b/src/app/pages/publication/components/publication/publication.component.scss
@@ -49,3 +49,11 @@
   border-radius: 4px;
 }
 
+.custom-action{
+  font-size: 16px;
+  cursor: pointer;
+  padding-right: 8px;
+  &:hover{
+    color: #1677ff;
+  }
+}
